fix: misalignment of attachment icon and title (#29086)

--- a/frappe/public/scss/desk/sidebar.scss
+++ b/frappe/public/scss/desk/sidebar.scss
@@ -766,6 +766,9 @@ body {
 			margin-left: var(--margin-xs);
 			text-align: left;
 		}
+		.attachment-icon {
+			line-height: 0;
+		}
 	}
 }
 
